# epi-sigsa

./: .gitignore  README.md  pyproject.toml
epi_sigsa/: main.py
epi_sigsa/src/: ingresos.py  paciente.py  scrap.py  session.py
epi_sigsa/src/data/: dicts.py  handle_data.py
registros/: ingresados.txt
