[tool.poetry]
name = "epi_sigsa"
version = "2.0.0"
description = "Proyecto v2 del ingreso de fichas de epiweb a sigsa3"
authors = ["Julio R <cesar32az@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
pandas = "^1.3.3"
xlrd = "^2.0.1"
openpyxl = "^3.0.8"
inquirerpy = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
  | README.md
)
'''

[tool.poetry.scripts]
dev = "epi_sigsa.main:main"
